# igvf_pseudobulking_pipeline

./: .env  .gitignore  README.md  environment.yml  igvf_process.py  igvf_process.sh  main.nf  nextflow.config  nextflow_schema.json  pixi.toml  test_metadata.tsv  tester.sh
core/0_download_data/: 0_set_up_workspace.sh  1_download_jsons.py  2_download_files.py  3_rename_files.py  4_cleanup_workspace.sh  PIPELINE.sh  download_files.sh  get_igvf_download_accessions.py
core/1_pseudobulking/: 0_set_up_workspace.sh  1_split_fragments.py  1_split_fragments.sh  2_catsort.sh  3_call_peaks.sh  4_rna_pseudobulking.py  4_rna_pseudobulking.sh  5_aggregate_outputs.py  5_rename_files.sh  6_cleanup_workspace.sh  PIPELINE.sh  utils.py
core/decipher/: PIPELINE.sh  decipher_lanemap.py
core/download_data/: download_files.py
dockers/: .dockerignore  pixi-project.Dockerfile  pixi-yaml.Dockerfile  uv-project.Dockerfile
download_accession_files/: pyproject.toml
download_accession_files/src/download_accession_files/: __init__.py  get_url.py
environments/: CALL_PEAKS.toml  CALL_PEAKS.yaml  DOWNLOAD_ACCESSION_FILES.yaml  PSEUDOBULK.yaml  VISUALIZE_QC.yaml
genome_data/: README.md  prep_gene_info.py  prep_tss_data.py
genome_data/human/tss_file_preprocess/: README.md  prep_tss_data.py
genome_data/mouse/: blacklist.bed  chr_sizes.tsv
igvf_portal/: generate_igvf_submission_file_20260407.py  generate_igvf_submission_file_runs_20260407.sh  igvf_portal_upload_20260408.sh  pyproject.toml
igvf_portal/src/igvf_portal/: __init__.py  config.py  constants.py  enums.py  igvf_lookup.py  igvf_uploads.py  types.py  upload_state.py  utils.py
igvf_portal/src/igvf_portal/tools/: download_file.py  gen_upload_script.py  infer_principal_analysis.py
modules/: CALL_PEAKS.nf  COLLECT_PSEUDOBULK_QC.nf  COMBINE_ACCESSION_QC.nf  DOWNLOAD_ACCESSION_FILES.nf  IGVF_UPLOAD.nf  MACS3.nf  PSEUDOBULK_RNA.nf  SORT_FRAGMENTS.nf  SPLIT_FRAGMENTS.nf  SUMMARIZE_PSEUDOBULK_QC.nf  WRITE_SUMMARY.nf
pseudobulk/: .python-version  pyproject.toml  setup.py
pseudobulk/src/pseudobulk/: __init__.py  barcode_qc.py  fragment.py  tss.pyi  tss.pyx  types.py  utils.py
pseudobulk/src/pseudobulk/tools/: combine_accession_qc.py  pseudobulk_rna.py  split_fragments.py  summarize_pseudobulk_qc.py
pseudobulk/test/: test_tss.py
scripts/: README.md  build-dockers.sh  build-project-docker.sh  build-yaml-docker.sh  check-projects.sh  fake-conda.sh  find-projects.sh  get-default-profile.sh  get-default-workspace.sh  get-workdir.sh  install-projects.sh  release.sh  remove-intermediates.sh  run-pipeline.sh  submit-pipeline.sh
visualize_qc/: pyproject.toml
visualize_qc/src/visualize_qc/: __init__.py  visualize_qc.py
