[project]
name = "visualize-qc"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ted Brookings", email = "ted.brookings@googlemail.com" }
]
requires-python = ">=3.14.6"
dependencies = [
    "defopt>=7.0.0",
    "jinja2>=3.1.6",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "polars>=1.42.1",
    "pyarrow>=24.0.0",
]

[project.scripts]
visualize-qc = "visualize_qc:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.3.260530",
]

[tool.poe.tasks]
lint = "ruff check --fix ."
format = "ruff format ."
types = "ty check ."
checks = ["lint", "format", "types"]
